// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`fixture 'interfaces' > query 'BasicCat' > should execute > explain 1`] = `
[
  {
    "data": {
      "animal": {
        "meows": true,
        "name": "Cathew",
        "type": "cat",
      },
    },
    "exports": [
      {
        "kind": "scalar",
        "name": "name",
      },
      {
        "kind": "scalar",
        "name": "type",
      },
      {
        "kind": "fragment",
        "selections": [
          {
            "kind": "scalar",
            "name": "meows",
          },
        ],
        "typeCondition": "Cat",
      },
    ],
    "includes": [],
    "kind": "interface",
    "ofType": "Animal",
    "operation": "query animal($name: ID!) {
  animal(name: $name) {
    name
    type
    ... on Cat {
      meows
    }
  }
}",
    "pathInData": [
      "animal",
    ],
    "pathToExportData": [
      "animal",
    ],
    "subgraph": "shelter",
    "type": "Animal",
    "variables": {
      "name": "Cathew",
    },
  },
]
`;

exports[`fixture 'interfaces' > query 'BasicCat' > should plan gather 1`] = `
{
  "operations": [
    {
      "name": "BasicCat",
      "resolvers": {
        "animal": {
          "exports": [
            {
              "kind": "scalar",
              "name": "name",
            },
            {
              "kind": "scalar",
              "name": "type",
            },
            {
              "kind": "fragment",
              "selections": [
                {
                  "kind": "scalar",
                  "name": "meows",
                },
              ],
              "typeCondition": "Cat",
            },
          ],
          "includes": {},
          "kind": "interface",
          "ofType": "Animal",
          "operation": "query animal($name: ID!) {
  animal(name: $name) {
    name
    type
    ... on Cat {
      meows
    }
  }
}",
          "pathToExportData": [
            "animal",
          ],
          "subgraph": "shelter",
          "type": "Animal",
          "variables": {
            "name": {
              "kind": "constant",
              "name": "name",
              "value": "Cathew",
            },
          },
        },
      },
      "type": "query",
    },
  ],
  "query": "query BasicCat {
  animal(name: "Cathew") {
    name
    type
    ... on Cat {
      meows
    }
  }
}",
}
`;

exports[`fixture 'interfaces' > query 'BasicNestedAnimal' > should execute > explain 1`] = `
[
  {
    "data": {
      "animal": {
        "barks": true,
        "bestFriend": {
          "meows": true,
          "name": "Cathew",
        },
        "name": "Dogeth",
        "type": "dog",
      },
    },
    "exports": [
      {
        "kind": "scalar",
        "name": "name",
      },
      {
        "kind": "scalar",
        "name": "type",
      },
      {
        "kind": "fragment",
        "selections": [
          {
            "kind": "scalar",
            "name": "barks",
          },
          {
            "kind": "object",
            "name": "bestFriend",
            "selections": [
              {
                "kind": "fragment",
                "selections": [
                  {
                    "kind": "scalar",
                    "name": "meows",
                  },
                  {
                    "kind": "scalar",
                    "name": "name",
                  },
                ],
                "typeCondition": "Cat",
              },
            ],
          },
        ],
        "typeCondition": "Dog",
      },
    ],
    "includes": [],
    "kind": "interface",
    "ofType": "Animal",
    "operation": "query animal($name: ID!) {
  animal(name: $name) {
    name
    type
    ... on Dog {
      barks
      bestFriend {
        ... on Cat {
          meows
          name
        }
      }
    }
  }
}",
    "pathInData": [
      "animal",
    ],
    "pathToExportData": [
      "animal",
    ],
    "subgraph": "shelter",
    "type": "Animal",
    "variables": {
      "name": "Dogeth",
    },
  },
]
`;

exports[`fixture 'interfaces' > query 'BasicNestedAnimal' > should plan gather 1`] = `
{
  "operations": [
    {
      "name": "BasicNestedAnimal",
      "resolvers": {
        "animal": {
          "exports": [
            {
              "kind": "scalar",
              "name": "name",
            },
            {
              "kind": "scalar",
              "name": "type",
            },
            {
              "kind": "fragment",
              "selections": [
                {
                  "kind": "scalar",
                  "name": "barks",
                },
                {
                  "kind": "object",
                  "name": "bestFriend",
                  "selections": [
                    {
                      "kind": "fragment",
                      "selections": [
                        {
                          "kind": "scalar",
                          "name": "meows",
                        },
                        {
                          "kind": "scalar",
                          "name": "name",
                        },
                      ],
                      "typeCondition": "Cat",
                    },
                  ],
                },
              ],
              "typeCondition": "Dog",
            },
          ],
          "includes": {},
          "kind": "interface",
          "ofType": "Animal",
          "operation": "query animal($name: ID!) {
  animal(name: $name) {
    name
    type
    ... on Dog {
      barks
      bestFriend {
        ... on Cat {
          meows
          name
        }
      }
    }
  }
}",
          "pathToExportData": [
            "animal",
          ],
          "subgraph": "shelter",
          "type": "Animal",
          "variables": {
            "name": {
              "kind": "constant",
              "name": "name",
              "value": "Dogeth",
            },
          },
        },
      },
      "type": "query",
    },
  ],
  "query": "query BasicNestedAnimal {
  animal(name: "Dogeth") {
    name
    type
    ... on Dog {
      barks
      bestFriend {
        ... on Cat {
          meows
          name
        }
      }
    }
  }
}",
}
`;

exports[`fixture 'store' > query 'BasicWithFragmentDefinition' > should execute > explain 1`] = `
[
  {
    "data": {
      "storefront": {
        "id": "apple-store",
        "name": "Apple Store",
        "products": [
          {
            "upc": "iphone",
          },
          {
            "upc": "ipad",
          },
        ],
      },
    },
    "exports": [
      {
        "kind": "scalar",
        "name": "id",
      },
      {
        "kind": "object",
        "name": "products",
        "selections": [
          {
            "kind": "scalar",
            "name": "upc",
          },
        ],
      },
      {
        "kind": "scalar",
        "name": "name",
      },
    ],
    "includes": [
      {
        "data": {
          "product": {
            "manufacturer": {
              "id": "apple",
            },
          },
        },
        "exports": [
          {
            "kind": "object",
            "name": "manufacturer",
            "selections": [
              {
                "kind": "scalar",
                "name": "id",
              },
            ],
          },
        ],
        "includes": [],
        "kind": "object",
        "ofType": "Product",
        "operation": "query ProductByUpc($Product_upc: ID!) {
  product(upc: $Product_upc) {
    manufacturer {
      id
    }
  }
}",
        "pathInData": [
          "storefront",
          "products",
          0,
        ],
        "pathToExportData": [
          "product",
        ],
        "subgraph": "products",
        "type": "Product",
        "variables": {
          "Product_upc": "iphone",
        },
      },
      {
        "data": {
          "product": {
            "manufacturer": {
              "id": "apple",
            },
          },
        },
        "exports": [
          {
            "kind": "object",
            "name": "manufacturer",
            "selections": [
              {
                "kind": "scalar",
                "name": "id",
              },
            ],
          },
        ],
        "includes": [],
        "kind": "object",
        "ofType": "Product",
        "operation": "query ProductByUpc($Product_upc: ID!) {
  product(upc: $Product_upc) {
    manufacturer {
      id
    }
  }
}",
        "pathInData": [
          "storefront",
          "products",
          1,
        ],
        "pathToExportData": [
          "product",
        ],
        "subgraph": "products",
        "type": "Product",
        "variables": {
          "Product_upc": "ipad",
        },
      },
    ],
    "kind": "object",
    "ofType": "Storefront",
    "operation": "query storefront($id: ID!) {
  storefront(id: $id) {
    id
    products {
      upc
    }
    name
  }
}",
    "pathInData": [
      "storefront",
    ],
    "pathToExportData": [
      "storefront",
    ],
    "subgraph": "storefronts",
    "type": "Storefront",
    "variables": {
      "id": "apple-store",
    },
  },
]
`;

exports[`fixture 'store' > query 'BasicWithFragmentDefinition' > should plan gather 1`] = `
{
  "operations": [
    {
      "name": "BasicWithFragmentDefinition",
      "resolvers": {
        "storefront": {
          "exports": [
            {
              "kind": "scalar",
              "name": "id",
            },
            {
              "kind": "object",
              "name": "products",
              "selections": [
                {
                  "kind": "scalar",
                  "name": "upc",
                },
              ],
            },
            {
              "kind": "scalar",
              "name": "name",
            },
          ],
          "includes": {
            "products": {
              "exports": [
                {
                  "kind": "object",
                  "name": "manufacturer",
                  "selections": [
                    {
                      "kind": "scalar",
                      "name": "id",
                    },
                  ],
                },
              ],
              "includes": {},
              "kind": "object",
              "ofType": "Product",
              "operation": "query ProductByUpc($Product_upc: ID!) {
  product(upc: $Product_upc) {
    manufacturer {
      id
    }
  }
}",
              "pathToExportData": [
                "product",
              ],
              "subgraph": "products",
              "type": "Product",
              "variables": {
                "Product_upc": {
                  "kind": "select",
                  "name": "Product_upc",
                  "select": "upc",
                },
              },
            },
          },
          "kind": "object",
          "ofType": "Storefront",
          "operation": "query storefront($id: ID!) {
  storefront(id: $id) {
    id
    products {
      upc
    }
    name
  }
}",
          "pathToExportData": [
            "storefront",
          ],
          "subgraph": "storefronts",
          "type": "Storefront",
          "variables": {
            "id": {
              "kind": "constant",
              "name": "id",
              "value": "apple-store",
            },
          },
        },
      },
      "type": "query",
    },
  ],
  "query": "query BasicWithFragmentDefinition {
  storefront(id: "apple-store") {
    id
    products {
      ...P
    }
    name
  }
}

fragment P on Product {
  upc
  manufacturer {
    id
  }
}",
}
`;

exports[`fixture 'store' > query 'BasicWithInlineFragment' > should execute > explain 1`] = `
[
  {
    "data": {
      "storefront": {
        "id": "samsung-store",
        "name": "Samsung",
        "products": [
          {
            "upc": "tv",
          },
          {
            "upc": "fold",
          },
          {
            "upc": "galaxy",
          },
        ],
      },
    },
    "exports": [
      {
        "kind": "scalar",
        "name": "id",
      },
      {
        "kind": "scalar",
        "name": "name",
      },
      {
        "kind": "object",
        "name": "products",
        "selections": [
          {
            "kind": "scalar",
            "name": "upc",
          },
        ],
      },
    ],
    "includes": [
      {
        "data": {
          "product": {
            "name": "Samsung TV",
          },
        },
        "exports": [
          {
            "kind": "scalar",
            "name": "name",
          },
        ],
        "includes": [],
        "kind": "object",
        "ofType": "Product",
        "operation": "query ProductByUpc($Product_upc: ID!) {
  product(upc: $Product_upc) {
    name
  }
}",
        "pathInData": [
          "storefront",
          "products",
          0,
        ],
        "pathToExportData": [
          "product",
        ],
        "subgraph": "products",
        "type": "Product",
        "variables": {
          "Product_upc": "tv",
        },
      },
      {
        "data": {
          "product": {
            "name": "Samsung Fold",
          },
        },
        "exports": [
          {
            "kind": "scalar",
            "name": "name",
          },
        ],
        "includes": [],
        "kind": "object",
        "ofType": "Product",
        "operation": "query ProductByUpc($Product_upc: ID!) {
  product(upc: $Product_upc) {
    name
  }
}",
        "pathInData": [
          "storefront",
          "products",
          1,
        ],
        "pathToExportData": [
          "product",
        ],
        "subgraph": "products",
        "type": "Product",
        "variables": {
          "Product_upc": "fold",
        },
      },
      {
        "data": {
          "product": {
            "name": "Samsung Galaxy",
          },
        },
        "exports": [
          {
            "kind": "scalar",
            "name": "name",
          },
        ],
        "includes": [],
        "kind": "object",
        "ofType": "Product",
        "operation": "query ProductByUpc($Product_upc: ID!) {
  product(upc: $Product_upc) {
    name
  }
}",
        "pathInData": [
          "storefront",
          "products",
          2,
        ],
        "pathToExportData": [
          "product",
        ],
        "subgraph": "products",
        "type": "Product",
        "variables": {
          "Product_upc": "galaxy",
        },
      },
    ],
    "kind": "object",
    "ofType": "Storefront",
    "operation": "query storefront($id: ID!) {
  storefront(id: $id) {
    id
    name
    products {
      upc
    }
  }
}",
    "pathInData": [
      "storefront",
    ],
    "pathToExportData": [
      "storefront",
    ],
    "subgraph": "storefronts",
    "type": "Storefront",
    "variables": {
      "id": "samsung-store",
    },
  },
]
`;

exports[`fixture 'store' > query 'BasicWithInlineFragment' > should plan gather 1`] = `
{
  "operations": [
    {
      "name": "BasicWithInlineFragment",
      "resolvers": {
        "storefront": {
          "exports": [
            {
              "kind": "scalar",
              "name": "id",
            },
            {
              "kind": "scalar",
              "name": "name",
            },
            {
              "kind": "object",
              "name": "products",
              "selections": [
                {
                  "kind": "scalar",
                  "name": "upc",
                },
              ],
            },
          ],
          "includes": {
            "products": {
              "exports": [
                {
                  "kind": "scalar",
                  "name": "name",
                },
              ],
              "includes": {},
              "kind": "object",
              "ofType": "Product",
              "operation": "query ProductByUpc($Product_upc: ID!) {
  product(upc: $Product_upc) {
    name
  }
}",
              "pathToExportData": [
                "product",
              ],
              "subgraph": "products",
              "type": "Product",
              "variables": {
                "Product_upc": {
                  "kind": "select",
                  "name": "Product_upc",
                  "select": "upc",
                },
              },
            },
          },
          "kind": "object",
          "ofType": "Storefront",
          "operation": "query storefront($id: ID!) {
  storefront(id: $id) {
    id
    name
    products {
      upc
    }
  }
}",
          "pathToExportData": [
            "storefront",
          ],
          "subgraph": "storefronts",
          "type": "Storefront",
          "variables": {
            "id": {
              "kind": "constant",
              "name": "id",
              "value": "samsung-store",
            },
          },
        },
      },
      "type": "query",
    },
  ],
  "query": "query BasicWithInlineFragment {
  storefront(id: "samsung-store") {
    id
    name
    products {
      ... on Product {
        upc
        name
      }
    }
  }
}",
}
`;

exports[`fixture 'store' > query 'ListOperationResolver' > should execute > explain 1`] = `
[
  {
    "data": {
      "productsByUpcs": [
        {
          "manufacturer": {
            "id": "samsung",
            "products": [
              {
                "name": "Samsung TV",
                "upc": "tv",
              },
              {
                "name": "Samsung Fold",
                "upc": "fold",
              },
              {
                "name": "Samsung Galaxy",
                "upc": "galaxy",
              },
            ],
          },
          "name": "Samsung Galaxy",
          "upc": "galaxy",
        },
        {
          "manufacturer": {
            "id": "apple",
            "products": [
              {
                "name": "Apple iPhone",
                "upc": "iphone",
              },
              {
                "name": "iPad",
                "upc": "ipad",
              },
            ],
          },
          "name": "Apple iPhone",
          "upc": "iphone",
        },
      ],
    },
    "exports": [
      {
        "kind": "scalar",
        "name": "upc",
      },
      {
        "kind": "scalar",
        "name": "name",
      },
      {
        "kind": "object",
        "name": "manufacturer",
        "selections": [
          {
            "kind": "object",
            "name": "products",
            "selections": [
              {
                "kind": "scalar",
                "name": "upc",
              },
              {
                "kind": "scalar",
                "name": "name",
              },
            ],
          },
          {
            "kind": "scalar",
            "name": "id",
            "private": true,
          },
        ],
      },
    ],
    "includes": [
      {
        "data": {
          "manufacturer": {
            "name": "Samsung",
          },
        },
        "exports": [
          {
            "kind": "scalar",
            "name": "name",
          },
        ],
        "includes": [],
        "kind": "object",
        "ofType": "Manufacturer",
        "operation": "query ManufacturerById($Manufacturer_id: ID!) {
  manufacturer(id: $Manufacturer_id) {
    name
  }
}",
        "pathInData": [
          "productsByUpcs",
          0,
          "manufacturer",
        ],
        "pathToExportData": [
          "manufacturer",
        ],
        "subgraph": "manufacturers",
        "type": "Manufacturer",
        "variables": {
          "Manufacturer_id": "samsung",
        },
      },
      {
        "data": {
          "manufacturer": {
            "name": "Apple",
          },
        },
        "exports": [
          {
            "kind": "scalar",
            "name": "name",
          },
        ],
        "includes": [],
        "kind": "object",
        "ofType": "Manufacturer",
        "operation": "query ManufacturerById($Manufacturer_id: ID!) {
  manufacturer(id: $Manufacturer_id) {
    name
  }
}",
        "pathInData": [
          "productsByUpcs",
          1,
          "manufacturer",
        ],
        "pathToExportData": [
          "manufacturer",
        ],
        "subgraph": "manufacturers",
        "type": "Manufacturer",
        "variables": {
          "Manufacturer_id": "apple",
        },
      },
    ],
    "kind": "object",
    "ofType": "Product",
    "operation": "query productsByUpcs($upcs: [ID!]!) {
  productsByUpcs(upcs: $upcs) {
    upc
    name
    manufacturer {
      products {
        upc
        name
      }
      id
    }
  }
}",
    "pathInData": [
      "productsByUpcs",
    ],
    "pathToExportData": [
      "productsByUpcs",
    ],
    "subgraph": "products",
    "type": "[Product]!",
    "variables": {
      "upcs": [
        "galaxy",
        "iphone",
      ],
    },
  },
]
`;

exports[`fixture 'store' > query 'ListOperationResolver' > should plan gather 1`] = `
{
  "operations": [
    {
      "name": "ListOperationResolver",
      "resolvers": {
        "productsByUpcs": {
          "exports": [
            {
              "kind": "scalar",
              "name": "upc",
            },
            {
              "kind": "scalar",
              "name": "name",
            },
            {
              "kind": "object",
              "name": "manufacturer",
              "selections": [
                {
                  "kind": "object",
                  "name": "products",
                  "selections": [
                    {
                      "kind": "scalar",
                      "name": "upc",
                    },
                    {
                      "kind": "scalar",
                      "name": "name",
                    },
                  ],
                },
                {
                  "kind": "scalar",
                  "name": "id",
                  "private": true,
                },
              ],
            },
          ],
          "includes": {
            "manufacturer": {
              "exports": [
                {
                  "kind": "scalar",
                  "name": "name",
                },
              ],
              "includes": {},
              "kind": "object",
              "ofType": "Manufacturer",
              "operation": "query ManufacturerById($Manufacturer_id: ID!) {
  manufacturer(id: $Manufacturer_id) {
    name
  }
}",
              "pathToExportData": [
                "manufacturer",
              ],
              "subgraph": "manufacturers",
              "type": "Manufacturer",
              "variables": {
                "Manufacturer_id": {
                  "kind": "select",
                  "name": "Manufacturer_id",
                  "select": "id",
                },
              },
            },
          },
          "kind": "object",
          "ofType": "Product",
          "operation": "query productsByUpcs($upcs: [ID!]!) {
  productsByUpcs(upcs: $upcs) {
    upc
    name
    manufacturer {
      products {
        upc
        name
      }
      id
    }
  }
}",
          "pathToExportData": [
            "productsByUpcs",
          ],
          "subgraph": "products",
          "type": "[Product]!",
          "variables": {
            "upcs": {
              "kind": "constant",
              "name": "upcs",
              "value": [
                "galaxy",
                "iphone",
              ],
            },
          },
        },
      },
      "type": "query",
    },
  ],
  "query": "query ListOperationResolver {
  productsByUpcs(upcs: ["galaxy", "iphone"]) {
    upc
    name
    manufacturer {
      products {
        upc
        name
      }
      name
    }
  }
}",
}
`;

exports[`fixture 'store' > query 'NotBasicWithInlineVariables' > should execute > explain 1`] = `
[
  {
    "data": {
      "storefront": {
        "id": "samsung-store",
        "name": "Samsung",
        "products": [
          {
            "upc": "tv",
          },
          {
            "upc": "fold",
          },
          {
            "upc": "galaxy",
          },
        ],
      },
    },
    "exports": [
      {
        "kind": "scalar",
        "name": "id",
      },
      {
        "kind": "scalar",
        "name": "name",
      },
      {
        "kind": "object",
        "name": "products",
        "selections": [
          {
            "kind": "scalar",
            "name": "upc",
          },
        ],
      },
    ],
    "includes": [
      {
        "data": {
          "product": {
            "manufacturer": {
              "id": "samsung",
              "products": [
                {
                  "name": "Samsung TV",
                  "upc": "tv",
                },
                {
                  "name": "Samsung Fold",
                  "upc": "fold",
                },
                {
                  "name": "Samsung Galaxy",
                  "upc": "galaxy",
                },
              ],
            },
            "name": "Samsung TV",
          },
        },
        "exports": [
          {
            "kind": "scalar",
            "name": "name",
          },
          {
            "kind": "object",
            "name": "manufacturer",
            "selections": [
              {
                "kind": "object",
                "name": "products",
                "selections": [
                  {
                    "kind": "scalar",
                    "name": "upc",
                  },
                  {
                    "kind": "scalar",
                    "name": "name",
                  },
                ],
              },
              {
                "kind": "scalar",
                "name": "id",
                "private": true,
              },
            ],
          },
        ],
        "includes": [
          {
            "data": {
              "manufacturer": {
                "name": "Samsung",
              },
            },
            "exports": [
              {
                "kind": "scalar",
                "name": "name",
              },
            ],
            "includes": [],
            "kind": "object",
            "ofType": "Manufacturer",
            "operation": "query ManufacturerById($Manufacturer_id: ID!) {
  manufacturer(id: $Manufacturer_id) {
    name
  }
}",
            "pathInData": [
              "storefront",
              "products",
              0,
              "manufacturer",
            ],
            "pathToExportData": [
              "manufacturer",
            ],
            "subgraph": "manufacturers",
            "type": "Manufacturer",
            "variables": {
              "Manufacturer_id": "samsung",
            },
          },
        ],
        "kind": "object",
        "ofType": "Product",
        "operation": "query ProductByUpc($Product_upc: ID!) {
  product(upc: $Product_upc) {
    name
    manufacturer {
      products {
        upc
        name
      }
      id
    }
  }
}",
        "pathInData": [
          "storefront",
          "products",
          0,
        ],
        "pathToExportData": [
          "product",
        ],
        "subgraph": "products",
        "type": "Product",
        "variables": {
          "Product_upc": "tv",
        },
      },
      {
        "data": {
          "product": {
            "manufacturer": {
              "id": "samsung",
              "products": [
                {
                  "name": "Samsung TV",
                  "upc": "tv",
                },
                {
                  "name": "Samsung Fold",
                  "upc": "fold",
                },
                {
                  "name": "Samsung Galaxy",
                  "upc": "galaxy",
                },
              ],
            },
            "name": "Samsung Fold",
          },
        },
        "exports": [
          {
            "kind": "scalar",
            "name": "name",
          },
          {
            "kind": "object",
            "name": "manufacturer",
            "selections": [
              {
                "kind": "object",
                "name": "products",
                "selections": [
                  {
                    "kind": "scalar",
                    "name": "upc",
                  },
                  {
                    "kind": "scalar",
                    "name": "name",
                  },
                ],
              },
              {
                "kind": "scalar",
                "name": "id",
                "private": true,
              },
            ],
          },
        ],
        "includes": [
          {
            "data": {
              "manufacturer": {
                "name": "Samsung",
              },
            },
            "exports": [
              {
                "kind": "scalar",
                "name": "name",
              },
            ],
            "includes": [],
            "kind": "object",
            "ofType": "Manufacturer",
            "operation": "query ManufacturerById($Manufacturer_id: ID!) {
  manufacturer(id: $Manufacturer_id) {
    name
  }
}",
            "pathInData": [
              "storefront",
              "products",
              1,
              "manufacturer",
            ],
            "pathToExportData": [
              "manufacturer",
            ],
            "subgraph": "manufacturers",
            "type": "Manufacturer",
            "variables": {
              "Manufacturer_id": "samsung",
            },
          },
        ],
        "kind": "object",
        "ofType": "Product",
        "operation": "query ProductByUpc($Product_upc: ID!) {
  product(upc: $Product_upc) {
    name
    manufacturer {
      products {
        upc
        name
      }
      id
    }
  }
}",
        "pathInData": [
          "storefront",
          "products",
          1,
        ],
        "pathToExportData": [
          "product",
        ],
        "subgraph": "products",
        "type": "Product",
        "variables": {
          "Product_upc": "fold",
        },
      },
      {
        "data": {
          "product": {
            "manufacturer": {
              "id": "samsung",
              "products": [
                {
                  "name": "Samsung TV",
                  "upc": "tv",
                },
                {
                  "name": "Samsung Fold",
                  "upc": "fold",
                },
                {
                  "name": "Samsung Galaxy",
                  "upc": "galaxy",
                },
              ],
            },
            "name": "Samsung Galaxy",
          },
        },
        "exports": [
          {
            "kind": "scalar",
            "name": "name",
          },
          {
            "kind": "object",
            "name": "manufacturer",
            "selections": [
              {
                "kind": "object",
                "name": "products",
                "selections": [
                  {
                    "kind": "scalar",
                    "name": "upc",
                  },
                  {
                    "kind": "scalar",
                    "name": "name",
                  },
                ],
              },
              {
                "kind": "scalar",
                "name": "id",
                "private": true,
              },
            ],
          },
        ],
        "includes": [
          {
            "data": {
              "manufacturer": {
                "name": "Samsung",
              },
            },
            "exports": [
              {
                "kind": "scalar",
                "name": "name",
              },
            ],
            "includes": [],
            "kind": "object",
            "ofType": "Manufacturer",
            "operation": "query ManufacturerById($Manufacturer_id: ID!) {
  manufacturer(id: $Manufacturer_id) {
    name
  }
}",
            "pathInData": [
              "storefront",
              "products",
              2,
              "manufacturer",
            ],
            "pathToExportData": [
              "manufacturer",
            ],
            "subgraph": "manufacturers",
            "type": "Manufacturer",
            "variables": {
              "Manufacturer_id": "samsung",
            },
          },
        ],
        "kind": "object",
        "ofType": "Product",
        "operation": "query ProductByUpc($Product_upc: ID!) {
  product(upc: $Product_upc) {
    name
    manufacturer {
      products {
        upc
        name
      }
      id
    }
  }
}",
        "pathInData": [
          "storefront",
          "products",
          2,
        ],
        "pathToExportData": [
          "product",
        ],
        "subgraph": "products",
        "type": "Product",
        "variables": {
          "Product_upc": "galaxy",
        },
      },
    ],
    "kind": "object",
    "ofType": "Storefront",
    "operation": "query storefront($id: ID!) {
  storefront(id: $id) {
    id
    name
    products {
      upc
    }
  }
}",
    "pathInData": [
      "storefront",
    ],
    "pathToExportData": [
      "storefront",
    ],
    "subgraph": "storefronts",
    "type": "Storefront",
    "variables": {
      "id": "samsung-store",
    },
  },
]
`;

exports[`fixture 'store' > query 'NotBasicWithInlineVariables' > should plan gather 1`] = `
{
  "operations": [
    {
      "name": "NotBasicWithInlineVariables",
      "resolvers": {
        "storefront": {
          "exports": [
            {
              "kind": "scalar",
              "name": "id",
            },
            {
              "kind": "scalar",
              "name": "name",
            },
            {
              "kind": "object",
              "name": "products",
              "selections": [
                {
                  "kind": "scalar",
                  "name": "upc",
                },
              ],
            },
          ],
          "includes": {
            "products": {
              "exports": [
                {
                  "kind": "scalar",
                  "name": "name",
                },
                {
                  "kind": "object",
                  "name": "manufacturer",
                  "selections": [
                    {
                      "kind": "object",
                      "name": "products",
                      "selections": [
                        {
                          "kind": "scalar",
                          "name": "upc",
                        },
                        {
                          "kind": "scalar",
                          "name": "name",
                        },
                      ],
                    },
                    {
                      "kind": "scalar",
                      "name": "id",
                      "private": true,
                    },
                  ],
                },
              ],
              "includes": {
                "manufacturer": {
                  "exports": [
                    {
                      "kind": "scalar",
                      "name": "name",
                    },
                  ],
                  "includes": {},
                  "kind": "object",
                  "ofType": "Manufacturer",
                  "operation": "query ManufacturerById($Manufacturer_id: ID!) {
  manufacturer(id: $Manufacturer_id) {
    name
  }
}",
                  "pathToExportData": [
                    "manufacturer",
                  ],
                  "subgraph": "manufacturers",
                  "type": "Manufacturer",
                  "variables": {
                    "Manufacturer_id": {
                      "kind": "select",
                      "name": "Manufacturer_id",
                      "select": "id",
                    },
                  },
                },
              },
              "kind": "object",
              "ofType": "Product",
              "operation": "query ProductByUpc($Product_upc: ID!) {
  product(upc: $Product_upc) {
    name
    manufacturer {
      products {
        upc
        name
      }
      id
    }
  }
}",
              "pathToExportData": [
                "product",
              ],
              "subgraph": "products",
              "type": "Product",
              "variables": {
                "Product_upc": {
                  "kind": "select",
                  "name": "Product_upc",
                  "select": "upc",
                },
              },
            },
          },
          "kind": "object",
          "ofType": "Storefront",
          "operation": "query storefront($id: ID!) {
  storefront(id: $id) {
    id
    name
    products {
      upc
    }
  }
}",
          "pathToExportData": [
            "storefront",
          ],
          "subgraph": "storefronts",
          "type": "Storefront",
          "variables": {
            "id": {
              "kind": "constant",
              "name": "id",
              "value": "samsung-store",
            },
          },
        },
      },
      "type": "query",
    },
  ],
  "query": "query NotBasicWithInlineVariables {
  storefront(id: "samsung-store") {
    id
    name
    products {
      upc
      name
      manufacturer {
        products {
          upc
          name
        }
        name
      }
    }
  }
}",
}
`;

exports[`fixture 'store' > query 'NotBasicWithOperationVariables' > should execute > explain 1`] = `
[
  {
    "data": {
      "storefront": {
        "id": "apple-store",
        "name": "Apple Store",
        "products": [
          {
            "upc": "iphone",
          },
          {
            "upc": "ipad",
          },
        ],
      },
    },
    "exports": [
      {
        "kind": "scalar",
        "name": "id",
      },
      {
        "kind": "scalar",
        "name": "name",
      },
      {
        "kind": "object",
        "name": "products",
        "selections": [
          {
            "kind": "scalar",
            "name": "upc",
          },
        ],
      },
    ],
    "includes": [
      {
        "data": {
          "product": {
            "manufacturer": {
              "id": "apple",
              "products": [
                {
                  "name": "Apple iPhone",
                  "upc": "iphone",
                },
                {
                  "name": "iPad",
                  "upc": "ipad",
                },
              ],
            },
            "name": "Apple iPhone",
          },
        },
        "exports": [
          {
            "kind": "scalar",
            "name": "name",
          },
          {
            "kind": "object",
            "name": "manufacturer",
            "selections": [
              {
                "kind": "object",
                "name": "products",
                "selections": [
                  {
                    "kind": "scalar",
                    "name": "upc",
                  },
                  {
                    "kind": "scalar",
                    "name": "name",
                  },
                ],
              },
              {
                "kind": "scalar",
                "name": "id",
                "private": true,
              },
            ],
          },
        ],
        "includes": [
          {
            "data": {
              "manufacturer": {
                "name": "Apple",
              },
            },
            "exports": [
              {
                "kind": "scalar",
                "name": "name",
              },
            ],
            "includes": [],
            "kind": "object",
            "ofType": "Manufacturer",
            "operation": "query ManufacturerById($Manufacturer_id: ID!) {
  manufacturer(id: $Manufacturer_id) {
    name
  }
}",
            "pathInData": [
              "storefront",
              "products",
              0,
              "manufacturer",
            ],
            "pathToExportData": [
              "manufacturer",
            ],
            "subgraph": "manufacturers",
            "type": "Manufacturer",
            "variables": {
              "Manufacturer_id": "apple",
            },
          },
        ],
        "kind": "object",
        "ofType": "Product",
        "operation": "query ProductByUpc($Product_upc: ID!) {
  product(upc: $Product_upc) {
    name
    manufacturer {
      products {
        upc
        name
      }
      id
    }
  }
}",
        "pathInData": [
          "storefront",
          "products",
          0,
        ],
        "pathToExportData": [
          "product",
        ],
        "subgraph": "products",
        "type": "Product",
        "variables": {
          "Product_upc": "iphone",
        },
      },
      {
        "data": {
          "product": {
            "manufacturer": {
              "id": "apple",
              "products": [
                {
                  "name": "Apple iPhone",
                  "upc": "iphone",
                },
                {
                  "name": "iPad",
                  "upc": "ipad",
                },
              ],
            },
            "name": "iPad",
          },
        },
        "exports": [
          {
            "kind": "scalar",
            "name": "name",
          },
          {
            "kind": "object",
            "name": "manufacturer",
            "selections": [
              {
                "kind": "object",
                "name": "products",
                "selections": [
                  {
                    "kind": "scalar",
                    "name": "upc",
                  },
                  {
                    "kind": "scalar",
                    "name": "name",
                  },
                ],
              },
              {
                "kind": "scalar",
                "name": "id",
                "private": true,
              },
            ],
          },
        ],
        "includes": [
          {
            "data": {
              "manufacturer": {
                "name": "Apple",
              },
            },
            "exports": [
              {
                "kind": "scalar",
                "name": "name",
              },
            ],
            "includes": [],
            "kind": "object",
            "ofType": "Manufacturer",
            "operation": "query ManufacturerById($Manufacturer_id: ID!) {
  manufacturer(id: $Manufacturer_id) {
    name
  }
}",
            "pathInData": [
              "storefront",
              "products",
              1,
              "manufacturer",
            ],
            "pathToExportData": [
              "manufacturer",
            ],
            "subgraph": "manufacturers",
            "type": "Manufacturer",
            "variables": {
              "Manufacturer_id": "apple",
            },
          },
        ],
        "kind": "object",
        "ofType": "Product",
        "operation": "query ProductByUpc($Product_upc: ID!) {
  product(upc: $Product_upc) {
    name
    manufacturer {
      products {
        upc
        name
      }
      id
    }
  }
}",
        "pathInData": [
          "storefront",
          "products",
          1,
        ],
        "pathToExportData": [
          "product",
        ],
        "subgraph": "products",
        "type": "Product",
        "variables": {
          "Product_upc": "ipad",
        },
      },
    ],
    "kind": "object",
    "ofType": "Storefront",
    "operation": "query storefront($id: ID!) {
  storefront(id: $id) {
    id
    name
    products {
      upc
    }
  }
}",
    "pathInData": [
      "storefront",
    ],
    "pathToExportData": [
      "storefront",
    ],
    "subgraph": "storefronts",
    "type": "Storefront",
    "variables": {
      "id": "apple-store",
    },
  },
]
`;

exports[`fixture 'store' > query 'NotBasicWithOperationVariables' > should plan gather 1`] = `
{
  "operations": [
    {
      "name": "NotBasicWithOperationVariables",
      "resolvers": {
        "storefront": {
          "exports": [
            {
              "kind": "scalar",
              "name": "id",
            },
            {
              "kind": "scalar",
              "name": "name",
            },
            {
              "kind": "object",
              "name": "products",
              "selections": [
                {
                  "kind": "scalar",
                  "name": "upc",
                },
              ],
            },
          ],
          "includes": {
            "products": {
              "exports": [
                {
                  "kind": "scalar",
                  "name": "name",
                },
                {
                  "kind": "object",
                  "name": "manufacturer",
                  "selections": [
                    {
                      "kind": "object",
                      "name": "products",
                      "selections": [
                        {
                          "kind": "scalar",
                          "name": "upc",
                        },
                        {
                          "kind": "scalar",
                          "name": "name",
                        },
                      ],
                    },
                    {
                      "kind": "scalar",
                      "name": "id",
                      "private": true,
                    },
                  ],
                },
              ],
              "includes": {
                "manufacturer": {
                  "exports": [
                    {
                      "kind": "scalar",
                      "name": "name",
                    },
                  ],
                  "includes": {},
                  "kind": "object",
                  "ofType": "Manufacturer",
                  "operation": "query ManufacturerById($Manufacturer_id: ID!) {
  manufacturer(id: $Manufacturer_id) {
    name
  }
}",
                  "pathToExportData": [
                    "manufacturer",
                  ],
                  "subgraph": "manufacturers",
                  "type": "Manufacturer",
                  "variables": {
                    "Manufacturer_id": {
                      "kind": "select",
                      "name": "Manufacturer_id",
                      "select": "id",
                    },
                  },
                },
              },
              "kind": "object",
              "ofType": "Product",
              "operation": "query ProductByUpc($Product_upc: ID!) {
  product(upc: $Product_upc) {
    name
    manufacturer {
      products {
        upc
        name
      }
      id
    }
  }
}",
              "pathToExportData": [
                "product",
              ],
              "subgraph": "products",
              "type": "Product",
              "variables": {
                "Product_upc": {
                  "kind": "select",
                  "name": "Product_upc",
                  "select": "upc",
                },
              },
            },
          },
          "kind": "object",
          "ofType": "Storefront",
          "operation": "query storefront($id: ID!) {
  storefront(id: $id) {
    id
    name
    products {
      upc
    }
  }
}",
          "pathToExportData": [
            "storefront",
          ],
          "subgraph": "storefronts",
          "type": "Storefront",
          "variables": {
            "id": {
              "kind": "user",
              "name": "id",
            },
          },
        },
      },
      "type": "query",
    },
  ],
  "query": "query NotBasicWithOperationVariables($id: ID!) {
  storefront(id: $id) {
    id
    name
    products {
      upc
      name
      manufacturer {
        products {
          upc
          name
        }
        name
      }
    }
  }
}",
}
`;

exports[`fixture 'store' > query 'ScalarListInOperation' > should execute > explain 1`] = `
[
  {
    "data": {
      "productNames": [
        "Samsung TV",
        "Samsung Fold",
        "Samsung Galaxy",
        "Apple iPhone",
        "iPad",
      ],
    },
    "kind": "scalar",
    "ofType": "String",
    "operation": "query productNames {
  productNames
}",
    "pathInData": [
      "productNames",
    ],
    "pathToExportData": [
      "productNames",
    ],
    "subgraph": "products",
    "type": "[String!]!",
    "variables": {},
  },
]
`;

exports[`fixture 'store' > query 'ScalarListInOperation' > should plan gather 1`] = `
{
  "operations": [
    {
      "name": "ScalarListInOperation",
      "resolvers": {
        "productNames": {
          "kind": "scalar",
          "ofType": "String",
          "operation": "query productNames {
  productNames
}",
          "pathToExportData": [
            "productNames",
          ],
          "subgraph": "products",
          "type": "[String!]!",
          "variables": {},
        },
      },
      "type": "query",
    },
  ],
  "query": "query ScalarListInOperation {
  productNames
}",
}
`;

exports[`fixture 'store' > query 'ScalarListInType' > should execute > explain 1`] = `
[
  {
    "data": {
      "storefront": {
        "productNames": [
          "Apple iPhone",
          "iPad",
        ],
      },
    },
    "exports": [
      {
        "kind": "scalar",
        "name": "productNames",
      },
    ],
    "includes": [],
    "kind": "object",
    "ofType": "Storefront",
    "operation": "query storefront($id: ID!) {
  storefront(id: $id) {
    productNames
  }
}",
    "pathInData": [
      "storefront",
    ],
    "pathToExportData": [
      "storefront",
    ],
    "subgraph": "storefronts",
    "type": "Storefront",
    "variables": {
      "id": "apple-store",
    },
  },
]
`;

exports[`fixture 'store' > query 'ScalarListInType' > should plan gather 1`] = `
{
  "operations": [
    {
      "name": "ScalarListInType",
      "resolvers": {
        "storefront": {
          "exports": [
            {
              "kind": "scalar",
              "name": "productNames",
            },
          ],
          "includes": {},
          "kind": "object",
          "ofType": "Storefront",
          "operation": "query storefront($id: ID!) {
  storefront(id: $id) {
    productNames
  }
}",
          "pathToExportData": [
            "storefront",
          ],
          "subgraph": "storefronts",
          "type": "Storefront",
          "variables": {
            "id": {
              "kind": "constant",
              "name": "id",
              "value": "apple-store",
            },
          },
        },
      },
      "type": "query",
    },
  ],
  "query": "query ScalarListInType {
  storefront(id: "apple-store") {
    productNames
  }
}",
}
`;

exports[`fixture 'store' > query 'ScalarOperationField' > should execute > explain 1`] = `
[
  {
    "data": {
      "manufacturerName": "Samsung",
    },
    "kind": "scalar",
    "ofType": "String",
    "operation": "query manufacturerName($id: ID!) {
  manufacturerName(id: $id)
}",
    "pathInData": [
      "manufacturerName",
    ],
    "pathToExportData": [
      "manufacturerName",
    ],
    "subgraph": "manufacturers",
    "type": "String",
    "variables": {
      "id": "samsung",
    },
  },
]
`;

exports[`fixture 'store' > query 'ScalarOperationField' > should plan gather 1`] = `
{
  "operations": [
    {
      "name": "ScalarOperationField",
      "resolvers": {
        "manufacturerName": {
          "kind": "scalar",
          "ofType": "String",
          "operation": "query manufacturerName($id: ID!) {
  manufacturerName(id: $id)
}",
          "pathToExportData": [
            "manufacturerName",
          ],
          "subgraph": "manufacturers",
          "type": "String",
          "variables": {
            "id": {
              "kind": "constant",
              "name": "id",
              "value": "samsung",
            },
          },
        },
      },
      "type": "query",
    },
  ],
  "query": "query ScalarOperationField {
  manufacturerName(id: "samsung")
}",
}
`;

exports[`fixture 'store' > query 'ScalarOperationFieldNested' > should execute > explain 1`] = `
[
  {
    "data": {
      "product": {
        "name": "iPad",
      },
    },
    "kind": "scalar",
    "ofType": "String",
    "operation": "query productName($upc: ID!) {
  product(upc: $upc) {
    name
  }
}",
    "pathInData": [
      "productName",
    ],
    "pathToExportData": [
      "product",
      "name",
    ],
    "subgraph": "products",
    "type": "String",
    "variables": {
      "upc": "ipad",
    },
  },
]
`;

exports[`fixture 'store' > query 'ScalarOperationFieldNested' > should plan gather 1`] = `
{
  "operations": [
    {
      "name": "ScalarOperationFieldNested",
      "resolvers": {
        "productName": {
          "kind": "scalar",
          "ofType": "String",
          "operation": "query productName($upc: ID!) {
  product(upc: $upc) {
    name
  }
}",
          "pathToExportData": [
            "product",
            "name",
          ],
          "subgraph": "products",
          "type": "String",
          "variables": {
            "upc": {
              "kind": "constant",
              "name": "upc",
              "value": "ipad",
            },
          },
        },
      },
      "type": "query",
    },
  ],
  "query": "query ScalarOperationFieldNested {
  productName(upc: "ipad")
}",
}
`;

exports[`should build proper operation and find export path for 'FindDeepestPath' resolver 1`] = `
{
  "operation": "query FindDeepestPath {
  manufacturer {
    nested {
      deep
    }
  }
}",
  "pathToExportData": [
    "manufacturer",
    "nested",
    "deep",
  ],
}
`;

exports[`should build proper operation and find export path for 'ManufacturerById' resolver 1`] = `
{
  "operation": "query ManufacturerById($Manufacturer_id: ID!) {
  manufacturer(id: $Manufacturer_id) {
    id
    name
  }
}",
  "pathToExportData": [
    "manufacturer",
  ],
}
`;

exports[`should build proper operation and find export path for 'ManufacturerNested' resolver 1`] = `
{
  "operation": "query ManufacturerNested {
  manufacturer {
    nested {
      deep {
        id
        name
        products {
          manufacturer {
            location
          }
          name
        }
      }
    }
  }
}",
  "pathToExportData": [
    "manufacturer",
    "nested",
    "deep",
  ],
}
`;

exports[`should build proper operation and find export path for 'MultipleTypes' resolver 1`] = `
{
  "operation": "query MultipleTypes {
  productAndManufaturer {
    ... on Product {
      name
      manufacturer {
        products {
          upc
          name
        }
        id
      }
    }
    ... on Manufacturer {
      id
      name
      products {
        manufacturer {
          location
        }
        name
      }
    }
  }
}",
  "pathToExportData": [
    "productAndManufaturer",
  ],
}
`;

exports[`should build proper operation and find export path for 'Nested' resolver 1`] = `
{
  "operation": "query Nested {
  product {
    ... on Product {
      name
      manufacturer {
        products {
          upc
          name
        }
        ... on Manufacturer {
          id
          name
          products {
            manufacturer {
              location
            }
            name
          }
        }
      }
    }
  }
}",
  "pathToExportData": [
    "product",
  ],
}
`;

exports[`should build proper operation and find export path for 'ProductByUpc' resolver 1`] = `
{
  "operation": "query ProductByUpc($Product_upc: ID!) {
  product(upc: $Product_upc) {
    name
    manufacturer {
      products {
        upc
        name
      }
      id
    }
  }
}",
  "pathToExportData": [
    "product",
  ],
}
`;

exports[`should build proper operation and find export path for 'storefront' resolver 1`] = `
{
  "operation": "query storefront($id: ID!) {
  storefront(id: $id) {
    id
    name
    products {
      upc
    }
  }
}",
  "pathToExportData": [
    "storefront",
  ],
}
`;
